last commit for new repo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,18 @@
-<header id="top" class="w-full flex flex-col fixed sm:relative bg-white pin-t pin-r pin-l">
-  <nav>
-    <img src="../assets/images/Logo.png" width="250px"  >
+<header class="flex sticky top-0 flex-row p-4 items-center justify-start bg-gray-100">
+  <div>
+    <img alt="logo" class="w-40 mr-2" src="../assets/images/Logo.png" />
+  </div>
 
-    <a class="btn " routerLink="home" routerLinkActive="active">Home</a>
-    <a class="btn" routerLink="user-profile" routerLinkActive="active">User Profile</a>
-    <a class="btn" routerLink="missions-profile" routerLinkActive="active">Missions Profile</a>
+  <nav class=" text-2xl p-4 font-light">
+    <a class="p-3 rounded-full hover:font-normal hover:shadow-md" routerLink="home" routerLinkActive="active">Home</a>
+    <a class="p-3 hover:font-normal hover:shadow-lg" routerLink="user-profile" routerLinkActive="active">User Profile</a>
+    <a class="p-3 hover:font-normal hover:shadow-lg" routerLink="missions-profile" routerLinkActive="active">Missions Profile</a>
   </nav>
+  
+  <div class="flex items-center ml-auto">
+    <a href="#" class=" text-2xl font-light m-4 p-2">Login</a>
+    <a href="#" class=" bg-gray-100 border border-logo-700 rounded-full text-xl font-normal m-4 pl-3 pr-3 p-1 hover:shadow-lg ">Sign Up</a>
+  </div>
 </header>
 <div style="text-align: center;">
   <div>google map here</div>
