--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -1,40 +1,41 @@
-<div class="bg-white shadow w-64 my-2">
-    <ul class="list-reset">
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter 900r-r-4 shadow-2xl">place holder profile</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
-      </li>
-      <li >
-        <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
-      </li>
-    </ul>
-  </div>
+<div class="bg-white shadow w-64 m-2">
+  <ul class="list-reset mb-2">
+    <li >
+      <img class="h-32 w-full object-cover object-center-bottom" src="../../../assets/images/placeholder-card.jpg" >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter 900r-r-4 shadow-2xl">place holder profile</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
+    </li>
+    <li >
+      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
+    </li>
+  </ul>
+</div>
