updating org card style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,18 @@
-<header class="flex sticky top-0 flex-row p-4 items-center justify-start bg-gray-100">
+<header class="flex sticky top-0 flex-row p-3 items-center justify-start bg-gray-100">
   <div>
-    <img alt="logo" class="w-40 mr-2" src="../assets/images/Logo.png" />
+    <img alt="logo" class="w-56 mr-2" src="../assets/images/Logo.png" />
   </div>
 
-  <nav class=" text-2xl p-4 font-light">
-    <a class="p-3 rounded-full hover:font-normal hover:shadow-md" routerLink="home" routerLinkActive="active">Home</a>
-    <a class="p-3 hover:font-normal hover:shadow-lg" routerLink="user-profile" routerLinkActive="active">User Profile</a>
-    <a class="p-3 hover:font-normal hover:shadow-lg" routerLink="missions-profile" routerLinkActive="active">Missions Profile</a>
+  <nav class=" text-2xl font-light">
+    <a class="m-2 pr-3 pl-2 rounded-b-md hover:font-normal hover:shadow-md" routerLink="home" routerLinkActive="active">Home</a>
+    <a class="m-2 pr-3 pl-2 rounded-b-md hover:font-normal hover:shadow-md" routerLink="user-profile" routerLinkActive="active">User Profile</a>
+    <a class="m-2 pr-3 pl-2 rounded-b-md hover:font-normal hover:shadow-md" routerLink="missions-profile" routerLinkActive="active">Missions Profile</a>
   </nav>
-  
+
   <div class="flex items-center ml-auto">
-    <a href="#" class=" text-2xl font-light m-4 p-2">Login</a>
-    <a href="#" class=" bg-gray-100 border border-logo-700 rounded-full text-xl font-normal m-4 pl-3 pr-3 p-1 hover:shadow-lg ">Sign Up</a>
+    <a href="#" class=" text-2xl font-light m-2 p-2 rounded-b-md hover:font-normal hover:shadow-md">Login</a>
+    <a href="#"
+      class=" bg-gray-100 border border-logo-700 rounded-full text-xl font-normal m-4 pl-3 pr-3 p-1 hover:shadow-lg ">Sign Up</a>
   </div>
 </header>
 <div style="text-align: center;">
