--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -1,41 +1,12 @@
-<div class="bg-white shadow w-64 m-2">
-  <ul class="list-reset mb-2">
-    <li >
-      <img class="h-32 w-full object-cover object-center-bottom" src="../../../assets/images/placeholder-card.jpg" >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter 900r-r-4 shadow-2xl">place holder profile</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-900 hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-purple hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 2</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 3</a>
-    </li>
-    <li >
-      <a href="#" class="block p-4 text-grey-darker font-bold border-grey-lighter hover:border-purple-light hover:bg-grey-lighter border-r-4 shadow-2xl">place holder profile 4 </a>
-    </li>
-  </ul>
+<div class="bg-white shadow w-1/4 m-2 border rounded-lg overflow-hidden">
+  <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
+  <div class="p-4">
+    <div class="flex items-center">
+      <h4 class="font-semibold text-lg text-gray-900 tracking-wide">Organization Name</h4>
+      <span class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
+
+    </div>
+    <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">16348 Gold Street<br>Redding, CA</div>
+    <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
+  </div>
 </div>
