--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -3,10 +3,13 @@
   <div class="p-4">
     <div class="flex items-center">
       <h4 class="font-semibold text-lg text-gray-900 tracking-wide">Organization Name</h4>
-      <span class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
+      <span
+        class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
 
     </div>
-    <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">16348 Gold Street<br>Redding, CA</div>
-    <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
+    <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">16348 Gold
+      Street<br>Redding, CA</div>
+    <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: Lorem ipsum dolor sit amet consectetur adipisicing
+      elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
   </div>
 </div>
