fixed google API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="flex sticky top-0 flex-row p-3 items-center justify-start bg-gray-100">
+<header class="flex sticky top-0 flex-row p-3 items-center justify-start bg-gray-100 shadow-md">
   <div>
     <img alt="logo" class="w-56 mr-2" src="../assets/images/Logo.png" />
   </div>
@@ -19,7 +19,7 @@
       Up</a>
   </div>
 </header>
-<div class="shadow-md">
+<!-- <div class="shadow-md">
   <div #mapContainer id="map"></div>
-</div>
+</div> -->
 <router-outlet></router-outlet>
