--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -1,3 +1,5 @@
+<div class="shadow-md" #mapContainer id="map"></div>
+
 <div class="bg-white shadow w-1/4 m-2 border rounded-lg overflow-hidden">
   <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
   <div class="p-4">
@@ -13,3 +15,4 @@
       elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
   </div>
 </div>
+
