--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -1,18 +1,21 @@
-<div class="shadow-md" #mapContainer id="map"></div>
+<div class="flex ">
 
-<div class="bg-white shadow w-1/4 m-2 border rounded-lg overflow-hidden">
-  <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
-  <div class="p-4">
-    <div class="flex items-center">
-      <h4 class="font-semibold text-lg text-gray-900 tracking-wide">Organization Name</h4>
-      <span
-        class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
-
+  <div class="fixed shadow-md" #mapContainer id="map"></div> <!-- DIV FOR MAP -->
+  
+  <div class="bg-white shadow w-1/4 m-2 border rounded-lg overflow-hidden"> <!-- ORG CARD -->
+    <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
+    <div class="p-4">
+      <div class="flex items-center">
+        <h4 class="font-semibold text-lg text-gray-900 tracking-wide">Organization Name</h4>
+        <span
+          class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
+  
+      </div>
+      <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">16348 Gold
+        Street<br>Redding, CA</div>
+      <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
     </div>
-    <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">16348 Gold
-      Street<br>Redding, CA</div>
-    <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: Lorem ipsum dolor sit amet consectetur adipisicing
-      elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
   </div>
 </div>
 
