--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
           routerLinkActive="active">Missions Profile</a>
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-gray-500 no-underline hover:text-gray-900 hover:font-normal py-2 px-4" href="#">Login</a>
+					<a class="inline-block text-gray-500 no-underline hover:text-gray-900 hover:font-normal py-2 px-4" routerLink="login" routerLinkActive="active">Login</a>
         </li>
         <li class="mr-3">
           <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4" href="#">Signup</a>
