update profile info

--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -51,7 +51,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
         
         
         <div class="flex flex-wrap -mx-3 mb-4">
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-city">
                     City
                 </label>
@@ -59,7 +59,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     class="appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 shadow rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                     id="grid-city" type="text" placeholder="Albuquerque">
             </div>
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-state">
                     State
                 </label>
@@ -78,13 +78,34 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     </div>
                 </div>
             </div>
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-zip">
-                    Zip
+        </div>
+        <div class="flex flex-wrap -mx-2 mb-2">
+            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-city">
+                    Zip Code
                 </label>
                 <input
                     class="appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 shadow rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                    id="grid-zip" type="text" placeholder="90210">
+                    id="grid-city" type="text" placeholder="90210">
+            </div>
+            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-state">
+                    Country
+                </label>
+                <div class="relative">
+                    <select
+                        class="block appearance-none w-full bg-gray-100 border border-gray-500 shadow text-gray-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                        id="grid-state">
+                        <option>Mexico</option>
+                        <option>Missouri</option>
+                        <option>Texas</option>
+                    </select>
+                    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                        <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                            <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
+                            </svg>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="block mt-4 uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">
@@ -101,13 +122,13 @@ https://tailwindcss-custom-forms.netlify.app/ -->
             </div>
             <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-state">
-                    State
+                    Country
                 </label>
                 <div class="relative">
                     <select
                         class="block appearance-none w-full bg-gray-100 border border-gray-500 shadow text-gray-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                         id="grid-state">
-                        <option>New Mexico</option>
+                        <option>Mexico</option>
                         <option>Missouri</option>
                         <option>Texas</option>
                     </select>
