added search,footers, and about button

--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -2,8 +2,7 @@
 https://tailwindcss-custom-forms.netlify.app/ -->
 
 <div class="bg-gray-100 rounded shadow-lg flex flex-row w-full" style="height:500px">
-    <div class="hidden md:block w-1/3 bg-cover bg-center h-full block flex-shrink-0 " 
-        >
+    <div class="hidden md:block w-1/3 bg-cover bg-center h-full block flex-shrink-0 ">
         <div class="bg-white shadow-lg w-3/4 m-12 border rounded-lg overflow-hidden"> <!-- ORG CARD -->
             <img class="h-48 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
             <div class="p-4">
@@ -673,3 +672,14 @@ https://tailwindcss-custom-forms.netlify.app/ -->
         <button class="bg-gray-700 text-white shadow rounded py-2 px-5 w-64 mt-10">Save Changes</button>
     </div>
 </div>
+
+<footer class='w-full text-center border-t border-grey p-4 pin-b  bg-gray-100'>
+    <div>
+        Contact Us: <a href="#"
+            class="  bg-gray-100 border border-logo-700 rounded-full text-l font-normal m-4 pl-3 pr-3 p-1 hover:shadow-lg ">
+            Email</a><br>
+        <p>Phone: (800)123-4567</p>
+        <p>fax: (800)123-4567</p>
+    </div>
+
+</footer>
