adjusted height of map card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
           routerLinkActive="active">Missions Profile</a>
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-gray-500 no-underline hover:text-gray-900 py-2 px-4" routerLink="missions-profile"
+					<a class="inline-block text-gray-500 no-underline hover:text-gray-900 py-2 px-4" routerLink="about"
           routerLinkActive="active">About</a>
 				</li>
 				<li class="mr-3">
