--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="fixed shadow-md" #mapContainer id="map"></div> <!-- DIV FOR MAP -->
   
-  <div class="bg-white shadow w-1/4 m-2 border rounded-lg overflow-hidden"> <!-- ORG CARD -->
+  <div class="bg-white shadow w-1/3 h-full m-2 border rounded-lg overflow-hidden"> <!-- ORG CARD -->
     <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
     <div class="p-4">
       <div class="flex items-center">
