--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -1,8 +1,9 @@
-<div class="flex ">
+<div class="flex flex-wrap ">
 
   <div class="fixed shadow-md" #mapContainer id="map"></div> <!-- DIV FOR MAP -->
   
-  <div class="bg-white shadow w-1/3 h-full m-2 border rounded-lg overflow-hidden"> <!-- ORG CARD -->
+  <!-- This will have to end up being a loop to accomedate for the search/map results -->
+  <div class="absolute bg-white shadow-lg w-1/5 m-6 rounded-lg overflow-hidden"> <!-- ORG CARD -->
     <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
     <div class="p-4">
       <div class="flex items-center">
