--- a/src/app/componets/login/login.component.html
+++ b/src/app/componets/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="bg-white rounded shadow-lg flex flex-row w-full" style="height:500px">
-    <div class="hidden md:block w-1/2 bg-cover bg-center h-full block flex-shrink-0 shadow-md"
+    <div class="hidden md:block w-1/2 bg-cover bg-center h-full block flex-shrink-0 shadow-2xl"
         style="background-image:url(https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1534&amp;q=80)">
     </div>
-    <div class="p-5 w-full flex flex-col justify-center items-center shadow-md">
+    <div class="p-5 w-full flex flex-col justify-center items-center shadow-2xl">
         <div class="flex flex-col mb-10 w-full"> <label class="block text-gray-700 text-sm font-medium pb-1"
                 for="email"> Email </label> <input
                 class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
