fixed the routing module to accept the signin comp

--- a/src/app/componets/sign-up/sign-up.component.html
+++ b/src/app/componets/sign-up/sign-up.component.html
@@ -1,25 +1,25 @@
+<!-- Something is up with this section. Problems with <app-signup> not being recognized -->
+<!-- <div style="text-align:center">
+  <h1>
+    Welcome to {{ title }}!
+  </h1>
+</div>
+<hr />
 <div style="text-align:center">
-    <h1>
-      Welcome to {{ title }}!
-    </h1>
+  <div>
+    <h2>Registration Page</h2>
+    <h3>{{signupPath}}</h3>
+    <app-signup [dataPath]="signupPath">
+    </app-signup>
   </div>
-  <hr/>
-  <div style="text-align:center">
-    <div>
-        <h2>Registration Page</h2>
-        <h3>{{signupPath}}</h3>
-        <app-signup
-          [dataPath]="signupPath">
-        </app-signup>
-    </div>
+</div> -->
+<footer class='w-full text-center border-t border-grey p-4 pin-b  bg-gray-100'>
+  <div>
+    Contact Us: <a href="#"
+      class="  bg-gray-100 border border-logo-700 rounded-full text-l font-normal m-4 pl-3 pr-3 p-1 hover:shadow-lg ">
+      Email</a><br>
+    <p>Phone: (800)123-4567</p>
+    <p>fax: (800)123-4567</p>
   </div>
-  <footer class='w-full text-center border-t border-grey p-4 pin-b  bg-gray-100'>
-    <div>
-        Contact Us: <a href="#"
-            class="  bg-gray-100 border border-logo-700 rounded-full text-l font-normal m-4 pl-3 pr-3 p-1 hover:shadow-lg ">
-            Email</a><br>
-        <p>Phone: (800)123-4567</p>
-        <p>fax: (800)123-4567</p>
-    </div>
 
 </footer>
