--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
 					<a class="inline-block text-gray-500 no-underline hover:text-gray-900 hover:font-normal py-2 px-4" routerLink="login" routerLinkActive="active">Login</a>
         </li>
         <li class="mr-3">
-          <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4" href="#">Signup</a>
+          <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4" routerLink="signup" routerLinkActive="active">Signup</a>
 				</li>
       </ul>
       
