--- a/src/app/componets/sign-up/sign-up.component.html
+++ b/src/app/componets/sign-up/sign-up.component.html
@@ -1,310 +1,73 @@
-<!-- Something is up with this section. Problems with <app-signup> not being recognized -->
-<!-- <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-<hr />
-<div style="text-align:center">
-  <div>
-    <h2>Registration Page</h2>
-    <h3>{{signupPath}}</h3>
-    <app-signup [dataPath]="signupPath">
-    </app-signup>
-  </div>
-</div> -->
-
-<div class="container w-full flex flex-wrap mx-auto px-2 pt-8 lg:pt-16 mt-16">
-  <div class="w-full lg:w-1/5 px-6 text-xl text-gray-800 leading-normal">
-      <p class="text-base font-bold py-2 lg:pb-6 text-gray-700">Menu</p>
-      <div class="block lg:hidden sticky inset-0">
-          <button id="menu-toggle" class="flex w-full justify-end px-3 py-3 bg-white lg:bg-transparent border rounded border-gray-600 hover:border-orange-600 appearance-none focus:outline-none">
-              <svg class="fill-current h-3 float-right" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
-              </svg>
-          </button>
-      </div>
-      <div class="w-full sticky inset-0 hidden max-h-64 lg:h-auto overflow-x-hidden overflow-y-auto lg:overflow-y-hidden lg:block mt-0 my-2 lg:my-0 border border-gray-400 lg:border-transparent bg-white shadow lg:shadow-none lg:bg-transparent z-20" style="top:6em;" id="menu-content">
-          <ul class="list-reset py-2 md:py-0">
-              <li class="py-1 md:my-2 hover:bg-orange-100 lg:hover:bg-transparent border-l-4 border-transparent font-bold border-orange-600">
-                  <a href='#section1' class="block pl-4 align-middle text-gray-700 no-underline hover:text-orange-600">
-                      <span class="pb-1 md:pb-0 text-sm">Section 1</span>
-                  </a>
-              </li>
-              <li class="py-1 md:my-2 hover:bg-orange-100 lg:hover:bg-transparent border-l-4 border-transparent">
-                  <a href='#section2' class="block pl-4 align-middle text-gray-700 no-underline hover:text-orange-600">
-                      <span class="pb-1 md:pb-0 text-sm">Section 2</span>
-                  </a>
-              </li>
-              <li class="py-1 md:my-2 hover:bg-orange-100 lg:hover:bg-transparent border-l-4 border-transparent">
-                  <a href='#section3' class="block pl-4 align-middle text-gray-700 no-underline hover:text-orange-600">
-                      <span class="pb-1 md:pb-0 text-sm">Section 3</span>
-                  </a>
-              </li>
-              <li class="py-1 md:my-2 hover:bg-orange-100 lg:hover:bg-transparent border-l-4 border-transparent">
-                  <a href='#section4' class="block pl-4 align-middle text-gray-700 no-underline hover:text-orange-600">
-                      <span class="pb-1 md:pb-0 text-sm">Section 4</span>
-                  </a>
-              </li>
-
-              <li class="py-1 md:my-2 hover:bg-orange-100 lg:hover:bg-transparent border-l-4 border-transparent">
-                  <a href='#section5' class="block pl-4 align-middle text-gray-700 no-underline hover:text-orange-600">
-                      <span class="pb-1 md:pb-0 text-sm">Section 5</span>
-                  </a>
-              </li>
-          </ul>
-      </div>
-  </div>
-
-  <!--Section container-->
-  <section class="w-full lg:w-4/5">
-
-      <!--Title-->
-      <h1 class="flex items-center font-sans font-bold break-normal text-gray-700 px-2 text-xl mt-12 lg:mt-0 md:text-2xl">
-  Multi Section Form with Scrollspy
-</h1>
-
-      <!--divider-->
-      <hr class="bg-gray-300 my-12">
-
-      <!--Title-->
-      <h2 id='section1' class="font-sans font-bold break-normal text-gray-700 px-2 pb-8 text-xl">Section 1</h2>
-
-      <!--Card-->
-      <div class="p-8 mt-6 lg:mt-0 leading-normal rounded shadow bg-white">
-          <li>Using the CDN version of <a class="underline text-orange-600" href="https://github.com/tailwindcss/custom-forms" target="_blank">Tailwind Custom Forms</a></li>
-          <li>This template uses jQuery for scrollspy</li>
-      </div>
-      <!--/Card-->
-
-      <!--divider-->
-      <hr class="bg-gray-300 my-12">
-
-      <!--Title-->
-      <h2 class="font-sans font-bold break-normal text-gray-700 px-2 pb-8 text-xl">Section 2</h2>
-
-      <!--Card-->
-      <div id='section2' class="p-8 mt-6 lg:mt-0 rounded shadow bg-white">
-
-          <form>
-
-              <div class="md:flex mb-6">
-                  <div class="md:w-1/3">
-                      <label class="block text-gray-600 font-bold md:text-left mb-3 md:mb-0 pr-4" for="my-textfield">
-                          Text Field
-                      </label>
-                  </div>
-                  <div class="md:w-2/3">
-                      <input class="form-input block w-full focus:bg-white" id="my-textfield" type="text" value="">
-                      <p class="py-2 text-sm text-gray-600">add notes about populating the field</p>
-                  </div>
-              </div>
-
-              <div class="md:flex mb-6">
-                  <div class="md:w-1/3">
-                      <label class="block text-gray-600 font-bold md:text-left mb-3 md:mb-0 pr-4" for="my-select">
-                          Drop down field
-                      </label>
-                  </div>
-                  <div class="md:w-2/3">
-                      <select name="" class="form-select block w-full focus:bg-white" id="my-select">
-                          <option value="Default">Default</option>
-                          <option value="A">A</option>
-                          <option value="B">B</option>
-                          <option value="C">C</option>
-                      </select>
-
-                      <p class="py-2 text-sm text-gray-600">add notes about populating the field</p>
-                  </div>
-              </div>
-
-              <div class="md:flex mb-6">
-                  <div class="md:w-1/3">
-                      <label class="block text-gray-600 font-bold md:text-left mb-3 md:mb-0 pr-4" for="my-textarea">
-                          Text Area
-                      </label>
-                  </div>
-                  <div class="md:w-2/3">
-                      <textarea class="form-textarea block w-full focus:bg-white" id="my-textarea" value="" rows="8"></textarea>
-                      <p class="py-2 text-sm text-gray-600">add notes about populating the field</p>
-                  </div>
-              </div>
-
-              <div class="md:flex md:items-center">
-                  <div class="md:w-1/3"></div>
-                  <div class="md:w-2/3">
-                      <button class="shadow bg-orange-700 hover:bg-orange-500 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                          Save
-                      </button>
-                  </div>
-              </div>
-          </form>
-
-      </div>
-      <!--/Card-->
-
-      <!--divider-->
-      <hr class="bg-gray-300 my-12">
-
-      <!--Title-->
-      <h2 class="font-sans font-bold break-normal text-gray-700 px-2 pb-8 text-xl">Section 3</h2>
-
-      <!--Card-->
-      <div id='section3' class="p-8 mt-6 lg:mt-0 rounded shadow bg-white">
-
-          <form>
-
-              <div class="md:flex mb-6">
-                  <div class="md:w-1/3">
-                      <label class="block text-gray-600 font-bold md:text-left mb-3 md:mb-0 pr-4" for="my-multiselect">
-                          Multi Select
-                      </label>
-                  </div>
-                  <div class="md:w-2/3">
-                      <select class="form-multiselect block w-full" multiple id="my-multiselect">
-                          <option>Option 1</option>
-                          <option>Option 2</option>
-                          <option>Option 3</option>
-                          <option>Option 4</option>
-                          <option>Option 5</option>
-                      </select>
-                      <p class="py-2 text-sm text-gray-600">add notes about populating the field</p>
-                  </div>
-              </div>
-
-              <div class="md:flex md:items-center">
-                  <div class="md:w-1/3"></div>
-                  <div class="md:w-2/3">
-                      <button class="shadow bg-orange-700 hover:bg-orange-500 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                          Save
-                      </button>
-                  </div>
-              </div>
-          </form>
-
-      </div>
-      <!--/Card-->
-
-      <!--divider-->
-      <hr class="bg-gray-300 my-12">
-
-      <!--Title-->
-      <h2 class="font-sans font-bold break-normal text-gray-700 px-2 pb-8 text-xl">Section 4</h2>
-
-      <!--Card-->
-      <div id='section4' class="p-8 mt-6 lg:mt-0 rounded shadow bg-white">
-
-          <form>
-
-              <div class="md:flex mb-6">
-                  <div class="md:w-1/3">
-                      <label class="block text-gray-600 font-bold md:text-left mb-3 md:mb-0 pr-4" for="my-radio">
-                          Radio Buttons
-                      </label>
-                  </div>
-                  <div class="md:w-2/3">
-                      <div class="mt-2">
-                          <label class="inline-flex items-center">
-                              <input type="radio" class="form-radio text-indigo-600" name="radioOption" value="A">
-                              <span class="ml-2">Radio A</span>
-                          </label>
-                          <label class="inline-flex items-center ml-6">
-                              <input type="radio" class="form-radio" name="radioOption" value="B">
-                              <span class="ml-2">Radio B</span>
-                          </label>
-                      </div>
-                      <p class="py-2 text-sm text-gray-600">add notes about populating the field</p>
-                  </div>
-              </div>
-
-              <div class="md:flex mb-6">
-                  <div class="md:w-1/3">
-                      <label class="block text-gray-600 font-bold md:text-left mb-3 md:mb-0 pr-4" for="my-checkbox">
-                          Checkboxes
-                      </label>
-                  </div>
-                  <div class="md:w-2/3">
-                      <div>
-                          <label class="inline-flex items-center">
-                              <input type="checkbox" class="form-checkbox text-indigo-600" checked>
-                              <span class="ml-2">Option 1</span>
-                          </label>
-                      </div>
-                      <div>
-                          <label class="inline-flex items-center">
-                              <input type="checkbox" class="form-checkbox text-green-500" checked>
-                              <span class="ml-2">Option 2</span>
-                          </label>
-                      </div>
-                      <div>
-                          <label class="inline-flex items-center">
-                              <input type="checkbox" class="form-checkbox text-pink-600" checked>
-                              <span class="ml-2">Option 3</span>
-                          </label>
-                      </div>
-                      <p class="py-2 text-sm text-gray-600">add notes about populating the field</p>
-                  </div>
-              </div>
-
-              <div class="md:flex md:items-center">
-                  <div class="md:w-1/3"></div>
-                  <div class="md:w-2/3">
-                      <button class="shadow bg-orange-700 hover:bg-orange-500 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                          Save
-                      </button>
-                  </div>
-              </div>
-          </form>
-
-      </div>
-      <!--/Card-->
-
-      <!--divider-->
-      <hr class="bg-gray-300 my-12">
-
-      <!--Title-->
-      <h2 class="font-sans font-bold break-normal text-gray-700 px-2 pb-8 text-xl">Section 5</h2>
-
-      <!--Card-->
-      <div id='section5' class="p-8 mt-6 lg:mt-0 rounded shadow bg-white">
-
-          <blockquote class="border-l-4 border-orange-600 italic my-4 pl-8 md:pl-12">Final confirmation disclaimer message etc</blockquote>
-
-          <div class="pt-8">
-
-              <button class="shadow bg-orange-700 hover:bg-orange-500 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded mr-4" type="button">
-                  Save
-              </button>
-
-              <button class="shadow bg-orange-100 hover:bg-orange-200 focus:shadow-outline focus:outline-none text-gray-700 font-bold py-2 px-4 rounded mr-4" type="button">
-                  Additional Action
-              </button>
-
-              <button class="shadow bg-orange-100 hover:bg-orange-200 focus:shadow-outline focus:outline-none text-gray-700 font-bold py-2 px-4 rounded" type="button">
-                  Additional Action
-              </button>
-
-          </div>
-
-      </div>
-      <!--/Card-->
-
-  </section>
-  <!--/Section container-->
-
-  <!--Back link -->
-  <div class="w-full lg:w-4/5 lg:ml-auto text-base md:text-sm text-gray-600 px-4 py-24 mb-12">
-    <span class="text-base text-orange-600 font-bold">&lt;</span> <a href="#" class="text-base md:text-sm text-orange-600 font-bold no-underline hover:underline">Back link</a>
-   </div>
-
-</div>
-<footer class='w-full text-center border-t border-grey p-4 pin-b  bg-gray-100'>
-  <div>
-    Contact Us: <a href="#"
-      class="  bg-gray-100 border border-logo-700 rounded-full text-l font-normal m-4 pl-3 pr-3 p-1 hover:shadow-lg ">
-      Email</a><br>
-    <p>Phone: (800)123-4567</p>
-    <p>fax: (800)123-4567</p>
-  </div>
-
-</footer>
+<form class="flex flex-wrap items-center justify-center mx-auto my-32 max-w-xl w-full max-w-lg">
+    <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                First Name
+            </label>
+            <input
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                id="grid-first-name" type="text" placeholder="Jane">
+            
+        </div>
+        <div class="w-full md:w-1/2 px-3">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-last-name">
+                Last Name
+            </label>
+            <input
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                id="grid-last-name" type="text" placeholder="Doe">
+        </div>
+    </div>
+    <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+                Email
+            </label>
+            <input
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                id="grid-password" type="password" placeholder="jesus@dachrist.com">
+            <p class="text-gray-600 text-xs italic">Remember to keep it professional Sparkles</p>
+        </div>
+        <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+                Phone Number
+            </label>
+            <input
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                id="grid-password" type="password" placeholder="xxx-xxx-xxxx">
+            <p class="text-gray-600 text-xs italic">Make it as long and as crazy as you'd like</p>
+        </div>
+    </div>
+    <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+                Username
+            </label>
+            <input
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                id="grid-password" type="password" placeholder="savior_complex">
+            <p class="text-gray-600 text-xs italic">Anything will do</p>
+        </div>
+        <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+                Password
+            </label>
+            <input
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                id="grid-password" type="password" placeholder="*************"s>
+            <p class="text-gray-600 text-xs italic">We're gonna salt it!</p>
+        </div>
+    </div>
+    <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="w-full  md:w-full  mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+                Bio
+            </label>
+            <textarea
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                id="grid-password" type="password" placeholder=""></textarea>
+            <p class="text-gray-600 text-xs italic">Tell us about yourself</p>
+        </div>
+    </div>
+    
+</form>
