--- a/src/app/componets/user-profile/user-profile.component.html
+++ b/src/app/componets/user-profile/user-profile.component.html
@@ -1,11 +1,11 @@
 <div class="bg-gray-200"> 
 
-    <div class="max-w-2xl flex items-center h-auto lg:h-screen flex-wrap ml-4 mr-20 mt-7 lg:my-0">
+    <div class="max-w-2xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
     
     
         <!--Main Col-->
         <div id="profile"
-            class="flex items-startw-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
+            class="flex items-start w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
     
     
             <div class="p-4 md:p-12 text-center lg:text-left">
