edit login comp

--- a/src/app/componets/login/login.component.html
+++ b/src/app/componets/login/login.component.html
@@ -4,9 +4,9 @@
     </div>
     <div class="p-5 w-full flex flex-col justify-center items-center shadow-2xl">
         <div class="flex flex-col mb-10 w-full"> <label class="block text-gray-700 text-sm font-medium pb-1"
-                for="email"> Email </label> <input
+                for="email"> Username </label> <input
                 class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                id="email" type="text" placeholder="cap@avengers.com"> </div>
+                id="email" type="text" placeholder="username"> </div>
         <div class="flex flex-col w-full"> <label class="block text-gray-700 text-sm font-medium pb-1" for="email">
                 Password </label> <input
                 class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
