added admin comp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 		</a>
 	</div>
 	<!-- search field -->
-	<div class="w-full flex-grow lg:flex  lg:content-center lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 z-20"
+	<div class="w-full flex-grow lg:flex  lg:content-center lg:items-center lg:w-auto hidden mt-2 lg:mt-0 z-20"
 		id="nav-content">
 		<div class="flex-1 w-full mx-auto max-w-sm content-center py-4 lg:py-0">
 			<div class="relative pull-right pl-4 pr-4 md:pr-0">
@@ -33,7 +33,7 @@
 		</button>
 	</div>
 
-	<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block pt-6 lg:pt-0" id="nav-content">
+	<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden  pt-6 lg:pt-0" id="nav-content">
 		<ul class=" list-reset lg:flex justify-end flex-1 items-center text-xl">
 			<li class="mr-3">
 				<a class="inline-block text-gray-500 no-underline hover:text-gray-900 hover:text-underline py-2 px-4"
