--- a/src/app/componets/login/login.component.html
+++ b/src/app/componets/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="bg-white rounded shadow-lg flex flex-row w-full" style="height:500px">
-    <div class="hidden md:block w-1/2 bg-cover bg-center h-full block flex-shrink-0 shadow-2xl"
+    <div class="hidden md:block w-1/2 bg-cover bg-center h-full flex-shrink-0 shadow-2xl"
         style="background-image:url(https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1534&amp;q=80)">
     </div>
     <!-- Form still needs an onSubmit() -->
