--- a/src/app/componets/user-profile/user-profile.component.html
+++ b/src/app/componets/user-profile/user-profile.component.html
@@ -95,7 +95,7 @@
         <div class="w-full lg:w-2/5">
             <!-- Big profile image for side bar (desktop) -->
             <img src="https://source.unsplash.com/MP0IUfwrn0A"
-                class="rounded-none flex items-left lg:rounded-lg shadow-2xl hidden lg:block">
+                class="rounded-none flex items-left lg:rounded-lg shadow-2xl lg:block">
             <!-- Image from: http://unsplash.com/photos/MP0IUfwrn0A -->
             <h3> Users </h3>
             <ul>
