--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -2,7 +2,7 @@
 https://tailwindcss-custom-forms.netlify.app/ -->
 
 <div class="bg-gray-100 rounded shadow-lg flex flex-row w-full" style="height:500px">
-    <div class="hidden md:block w-1/3 bg-cover bg-center h-full block flex-shrink-0 ">
+    <div class="hidden md:block w-1/3 bg-cover bg-center h-full flex-shrink-0 ">
         <div class="bg-white shadow-lg w-3/4 m-12 border rounded-lg overflow-hidden"> <!-- ORG CARD -->
             <img class="h-48 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
             <div class="p-4">
