got admin page working with backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,7 +81,7 @@
 <router-outlet></router-outlet>
 
 
-<footer class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-4 bg-gray-100'>
+<footer class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-4 pin-b bg-gray-100'>
 	<div class="flex flex-wrap justify-center p-4">
 		<div class="flex flex-wrap mb-4 w-full">
 		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/2 ">
