--- a/src/app/componets/user-profile/user-profile.component.html
+++ b/src/app/componets/user-profile/user-profile.component.html
@@ -100,7 +100,7 @@
             <h3> Users </h3>
             <ul>
                 <li *ngFor="let user of users">
-                  <p>{{user.id + 1}}. {{user.FirstName}}</p>
+                  <p>{{user.userId + 1}}. {{user.FirstName}}</p>
                 </li>
               </ul>
         </div>
