pull for intergration

--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="flex flex-wrap ">
 
   <agm-map class="fixed shadow-md" [latitude]="lat" [longitude]="lng">
-    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+    <agm-marker [latitude]="lat" [longitude]="lng" ></agm-marker>
+    <agm-marker [latitude]="mklat" [longitude]="mklng"></agm-marker>
   </agm-map> <!-- DIV FOR MAP -->
   
 <map-card></map-card>
