--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -2,7 +2,7 @@
 
   <agm-map class="fixed shadow-md" [latitude]="lat" [longitude]="lng">
     <agm-marker [latitude]="lat" [longitude]="lng" ></agm-marker>
-    <agm-marker [latitude]="mklat" [longitude]="mklng"></agm-marker>
+    <div *ngFor="let marker of markerLocation"><agm-marker [latitude]="marker.geometry.location.lat" [longitude]="marker.geometry.location.lng"></agm-marker></div>
   </agm-map> <!-- DIV FOR MAP -->
   
 <map-card></map-card>
