--- a/src/app/componets/sign-up/sign-up.component.html
+++ b/src/app/componets/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" class="flex flex-wrap items-center justify-center mx-auto my-32 w-full max-w-lg">
+<form  (ngSubmit)="submitForm()" class="flex flex-wrap items-center justify-center mx-auto my-32 w-full max-w-lg">
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="firstName">
@@ -67,8 +67,9 @@
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                 id="bio" name="bio" type="text" placeholder=""></textarea>
             <p class="text-gray-600 text-xs italic">Tell us about yourself</p>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </div>
-    
+
 </form>
 
