--- a/src/app/componets/user-profile/user-profile.component.html
+++ b/src/app/componets/user-profile/user-profile.component.html
@@ -97,12 +97,18 @@
             <img src="https://source.unsplash.com/MP0IUfwrn0A"
                 class="rounded-none flex items-left lg:rounded-lg shadow-2xl lg:block">
             <!-- Image from: http://unsplash.com/photos/MP0IUfwrn0A -->
-            <h3> Users </h3>
-            <ul>
-                <li *ngFor="let user of users">
-                  <p>{{user.userId + 1}}. {{user.FirstName}}</p>
-                </li>
-              </ul>
+            
+        </div>
+        <div>
+            <h1>Users </h1>
+
+
+            <ul *ngFor="let users of Userlist">
+                 
+                <li>{{users.FirstName}} {{users.LastName}}</li>
+                <li>Email: {{users.Email}}</li>
+                <li>Username: {{users.Username}}</li>
+            </ul>
         </div>
 
         <!-- <div class="p-5 w-2/3 flex flex-col justify-center items-center "> --> <!-- LEFT SIDE OF FORM: profile picture & BIO -->
