--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,9 +81,9 @@
 <router-outlet></router-outlet>
 
 
-<footer class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-4 pin-b bg-gray-100'>
-	<div class="flex flex-wrap justify-center p-4">
-		<div class="flex flex-wrap mb-4 w-full">
+<footer class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-1 pin-b bg-gray-100'>
+	<div class="flex flex-wrap justify-center p-1">
+		<div class="flex flex-wrap mb-2 w-full">
 		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/2 ">
 			<h3 class="text-2xl py-4">About Us</h3>
 			<p>This application was produced by Bethel School of Technology students: Brittani Falor, Colin Cantwell, Scott Goodwin and Connor Chaffin. This web application is built on an Angular Front-end Framework and sourced from a SQL Database using Express/Node.js Back-end.
@@ -102,12 +102,12 @@
 			
 		  </div>
 		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 ">
-			<h3 class="text-2xl py-4">Links</h3>
+			<h3 class="text-2xl py-4">GitHub Links</h3>
 			<ul>
-			  <li><a href="#">Link</a></li>
-			  <li><a href="#">Link</a></li>
-			  <li><a href="#">Link</a></li>
-			  <li><a href="#">Link</a></li>
+			  <li><a href="https://github.com/Cantwell136">Colin Cantwell</a></li>
+			  <li><a href="https://github.com/scottyg68">Scott Goodwin</a></li>
+			  <li><a href="https://github.com/BrittaniFalor">Brittani Falor</a></li>
+			  <li><a href="https://github.com/connor-chaffin">Connor Chaffin</a></li>
 			</ul>
 		  </div>
 		  
