--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -8,7 +8,7 @@
 <map-card></map-card>
   <!-- This will have to end up being a loop to accomedate for the search/map results -->
   <div class="absolute bg-white shadow-lg w-1/5 m-6 rounded-lg overflow-hidden"> <!-- ORG CARD -->
-    <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
+    <img class="bg-h-40 bg-w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
     <div class="p-4">
       <div class="flex items-center">
         <h4 class="font-semibold text-lg text-gray-900 tracking-wide">Organization Name</h4>
