--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<nav class="flex items-center justify-between flex-wrap shadow-md bg-gray-100 p-2 fixed w-full z-10 top-0">
+<!-- <nav class="flex items-center justify-between flex-wrap shadow-md bg-gray-100 p-2 fixed w-full z-10 top-0">
 	<div class="flex items-center flex-shrink-0 mr-6">
 		<a routerLink="home" routerLinkActive="active">
 			<img alt="logo" class="w-48 mr-2 shadow-lg" src="../assets/images/Logo.png">
 		</a>
-	</div>
-	<!-- search field -->
+	</div> -->
+	<!-- search field
 	<div class="w-full flex-grow lg:flex  lg:content-center lg:items-center lg:w-auto hidden mt-2 lg:mt-0 z-20"
 		id="nav-content">
 		<div class="flex-1 w-full mx-auto max-w-sm content-center py-4 lg:py-0">
@@ -62,11 +62,11 @@
 		</ul>
 
 	</div>
-</nav>
+</nav> -->
 
 
 <!--Container-->
-<div class="container shadow-lg mx-auto bg-white mt-24 md:mt-18">
+<!-- <div class="container shadow-lg mx-auto bg-white mt-24 md:mt-18">
 
 </div>
 
@@ -75,8 +75,45 @@
 	document.getElementById('nav-toggle').onclick = function () {
 		document.getElementById("nav-content").classList.toggle("hidden");
 	}
-</script>
+</script> -->
 
+<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+<div style="height: 100vh;">
+	<mat-toolbar color="primary">
+	  <span>Responsive Navigation</span>
+  
+	  <span class="example-spacer"></span>
+  
+	  <div fxShow="true" fxHide.lt-md="true">
+		<!-- The following menu items will be hidden on both SM and XS screen sizes -->
+		<a routerLink="home" mat-button>Home</a>
+		<a routerLink="user-profile"  mat-button>User Profile</a>
+		<a routerLink="missions-profile" mat-button>Missions Profile</a>
+		<a routerLink="about"mat-button>About</a>
+		<a routerLink="login" mat-button>Login</a>
+		<a routerLink="signup" mat-button>Signup</a>
+	  </div>
+  
+	  <div fxShow="true" fxHide.gt-sm="true">
+		<a href="#" (click)="sidenav.toggle()">Show Side Menu</a>
+	  </div>
+	</mat-toolbar>
+  
+	<mat-sidenav-container fxFlexFill class="example-container">
+	  <mat-sidenav #sidenav fxLayout="column">
+		<div fxLayout="column">
+		  <a (click)="sidenav.toggle()" href="#" mat-button>Close</a>
+		  <a routerLink="home" mat-button>Home</a>
+		<a routerLink="user-profile"  mat-button>User Profile</a>
+		<a routerLink="missions-profile" mat-button>Missions Profile</a>
+		<a routerLink="about"mat-button>About</a>
+		<a routerLink="login" mat-button>Login</a>
+		<a routerLink="signup" mat-button>Signup</a>
+		</div>
+	  </mat-sidenav>
+	  <mat-sidenav-content fxFlexFill>Main content</mat-sidenav-content>
+	</mat-sidenav-container>
+  </div>
 
 <router-outlet></router-outlet>
 
