--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -24,7 +24,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="logo"> Organization Logo </label>
             <input
                 class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-10 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                id="logo" type="file" accept="image" >
+                id="logo" type="file" accept="image" [(ngModel)]="newMission.city" >
         </div>
         <div class="flex flex-col mb-5 w-full">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="bio"> Bio </label>
@@ -39,19 +39,19 @@ https://tailwindcss-custom-forms.netlify.app/ -->
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-name"> Organization Name </label>
             <input
                 class="appearance-none block w-full bg-gray-100 text-gray-700 border shadow border-gray-500 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="org-name" type="text" placeholder="Organization Name">
+                id="org-name" type="text" placeholder="Organization Name" [(ngModel)]="newMission.organizationName">
         </div>
         <div class="flex flex-col mb-4 w-full">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-address"> Organization Address </label>
             <input
                 class="appearance-none block w-full bg-gray-100 text-gray-700 border shadow border-gray-500 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="org-street" type="text" placeholder="Street Address">
+                id="org-street" type="text" placeholder="Street Address" [(ngModel)]="newMission.organizationStreetAddress">
         </div>
         <div class="flex flex-col mb-4 w-full">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-address"> City </label>
             <input
                 class="appearance-none block w-full bg-gray-100 text-gray-700 border shadow border-gray-500 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="org-city" type="text" placeholder="City">
+                id="org-city" type="text" placeholder="City" [(ngModel)]="newMission.missionLocationCity">
         </div>
         
         <div class="flex flex-wrap -mx-3 mb-4">
@@ -61,7 +61,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                 </label>
                 <div class="relative">
                     <select class="block appearance-none w-full bg-gray-100 border border-gray-500 shadow text-gray-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                    id="org-state">
+                    id="org-state" [(ngModel)]="newMission.state">
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
@@ -128,7 +128,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                 </label>
                 <input
                     class="appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 shadow rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                    id="grid-city" type="text" placeholder="90210">
+                    id="grid-city" type="text" placeholder="90210" [(ngModel)]="newMission.zip">
             </div>
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-country">
@@ -136,7 +136,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                 </label>
                 <div class="relative">
                     <select class="block appearance-none w-full bg-gray-100 border border-gray-500 shadow text-gray-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                    id="org-country">
+                    id="org-country" [(ngModel)]="newMission.missionLocationCountry">
                         <option value="Afganistan">Afghanistan</option>
                         <option value="Albania">Albania</option>
                         <option value="Algeria">Algeria</option>
