--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,12 +80,7 @@
 	const menu = document.getElementById('nav-content');
 	const toggle = () => menu.classList.toggle("hidden");
   </script> -->
-
-
-<router-outlet></router-outlet>
-
-
-<footer class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-1 pin-b bg-gray-100'>
+  <footer class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-1 pin-b bg-gray-100'>
 	<div class="flex flex-wrap justify-center p-1">
 		<div class="flex flex-wrap mb-2 w-full">
 		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/2 ">
@@ -118,3 +113,40 @@
 		</div>
 	  </div>
 </footer>
+
+<router-outlet></router-outlet>
+
+
+<!-- <footer class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-1 pin-b bg-gray-100'>
+	<div class="flex flex-wrap justify-center p-1">
+		<div class="flex flex-wrap mb-2 w-full">
+		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/2 ">
+			<h3 class="text-2xl py-4">About Us</h3>
+			<p>This application was produced by Bethel School of Technology students: Brittani Falor, Colin Cantwell, Scott Goodwin and Connor Chaffin. This web application is built on an Angular Front-end Framework and sourced from a SQL Database using Express/Node.js Back-end.
+			</p>
+		  </div>
+		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 pl-8">
+			<h3 class="text-2xl py-4">Contact Us</h3>
+			<ul>
+			  <li>Phone: <a href="#">900-800-2357</a></li>
+			  <li>Email: <a href="#">globalmissions@mtgc.com</a></li>
+			</ul>
+			<h3 class="text-xl py-4">
+				<a class="inline-block text-gray-500 no-underline hover:text-gray-900 hover:font-normal py-2 px-4"
+					routerLink="admin" routerLinkActive="active">Admin</a>
+			</h3>
+			
+		  </div>
+		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 ">
+			<h3 class="text-2xl py-4">GitHub Links</h3>
+			<ul>
+			  <li><a href="https://github.com/Cantwell136">Colin Cantwell</a></li>
+			  <li><a href="https://github.com/scottyg68">Scott Goodwin</a></li>
+			  <li><a href="https://github.com/BrittaniFalor">Brittani Falor</a></li>
+			  <li><a href="https://github.com/connor-chaffin">Connor Chaffin</a></li>
+			</ul>
+		  </div>
+		  
+		</div>
+	  </div>
+</footer> -->
